# carquet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_compression_sanitized  test_encodings_sanitized
.github/workflows/: cpp.yml
benchmark/: benchmark_carquet.c  benchmark_pyarrow.py  generate_test_files.py  profile_core.c  results.csv  run_benchmark.sh
ci/: environment.yml
cmake/: carquetConfig.cmake.in
examples/: basic_write_read.c  compression_codecs.c  data_types.c  nullable_columns.c
fuzz/: CMakeLists.txt  README.md  fuzz_compression.c  fuzz_encodings.c  fuzz_reader.c  fuzz_roundtrip.c  fuzz_thrift.c  fuzz_writer.c  parquet.dict  run_fuzzer.sh
include/carquet/: carquet.h  error.h  types.h
interop/: generate_test_files.py  roundtrip_test.py  roundtrip_writer.c  run_interop_tests.sh  test_interop  test_interop.c  verify_carquet_output.py  verify_comprehensive.py
interop/test_files/: manifest.json
interop/test_files/duckdb/: duckdb_basic.parquet  duckdb_nulls.parquet  duckdb_zstd.parquet
interop/test_files/fastparquet/: fastparquet_basic.parquet  fastparquet_snappy.parquet
interop/test_files/pyarrow/: all_nulls.parquet  basic_types_gzip.parquet  basic_types_lz4.parquet  basic_types_snappy.parquet  basic_types_uncompressed.parquet  basic_types_zstd.parquet  binary_data.parquet  datetime_types.parquet  decimal_types.parquet  delta_encoded.parquet  dictionary_encoded.parquet  empty_table.parquet  multiple_row_groups.parquet
profiling/: README.md  profile_micro.c  profile_read.c  run_profile.sh
profiling/output/: carquet_20260103_041615_report.txt  carquet_20260103_041615_stat.txt  carquet_20260103_041615_top_functions.txt
src/compression/: gzip.c  lz4.c  snappy.c  zstd.c
src/core/: arena.c  arena.h  bitpack.c  bitpack.h  buffer.c  buffer.h  endian.c  endian.h  error.c
src/encoding/: byte_stream_split.c  delta.c  delta_length.c  delta_strings.c  dictionary.c  plain.c  plain.h  rle.c  rle.h
src/metadata/: bloom_filter.c  page_index.c  schema.c  statistics.c
src/reader/: batch_reader.c  column_reader.c  file_reader.c  mmap_reader.c  page_reader.c  reader_internal.h  row_group_reader.c  statistics.c
src/simd/: detect.c  dispatch.c
src/simd/arm/: crc32_arm.c  neon_ops.c  sve_ops.c
src/simd/x86/: avx2_ops.c  avx512_ops.c  sse_ops.c
src/thrift/: parquet_types.c  parquet_types.h  thrift_decode.c  thrift_decode.h  thrift_encode.c  thrift_encode.h
src/util/: crc32.c  xxhash.c
src/writer/: column_writer.c  file_writer.c  page_writer.c  row_group_writer.c
test_compression_sanitized.dSYM/Contents/: Info.plist
test_compression_sanitized.dSYM/Contents/Resources/DWARF/: test_compression_sanitized
test_compression_sanitized.dSYM/Contents/Resources/Relocations/aarch64/: test_compression_sanitized.yml
test_encodings_sanitized.dSYM/Contents/: Info.plist
test_encodings_sanitized.dSYM/Contents/Resources/DWARF/: test_encodings_sanitized
test_encodings_sanitized.dSYM/Contents/Resources/Relocations/aarch64/: test_encodings_sanitized.yml
tests/: test_compression.c  test_core.c  test_edge_boundaries.c  test_edge_compression.c  test_edge_encodings.c  test_edge_io.c  test_edge_malformed.c  test_encodings.c  test_encodings_extended.c  test_helpers.h  test_large_schema.c  test_maturity.c  test_mmap.c  test_production.c  test_reader.c  test_thrift.c  test_utils.c
